--- a/css/layout.css
+++ b/css/layout.css
@@ -49,7 +49,7 @@ li a {
   font-size: 16px;
   font-weight: 500;
   font-family: Hind, sans-serif;
-  color: #515769;
+  color: #2669c4;
 }
 
 a {
@@ -92,13 +92,13 @@ span {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   font-family: Hind, sans-serif;
-  color: #515769;
+  color: #2669c4;
   line-height: 1.4;
   margin: 0 0 15px;
 }
 
 h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a {
-  color: #515769;
+  color: #2669c4;
 }
 
 h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover {
@@ -246,13 +246,13 @@ fieldset[disabled] .btn-theme {
 }
 
 .btn-white-brd:hover, .btn-white-brd:focus, .btn-white-brd.focus {
-  color: #515769;
+  color: #2669c4;
   background: #fff;
   border-color: transparent;
 }
 
 .btn-default-bg {
-  color: #515769;
+  color: #2669c4;
   background: #f3f4f5;
   border-color: transparent;
   border-width: 0;
@@ -540,7 +540,7 @@ fieldset[disabled] .btn-theme {
   width: 21px;
   height: 1px;
   display: inline-block;
-  background: #515769;
+  background: #2669c4;
   transition-duration: 300ms;
   transition-property: all;
   transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
@@ -549,7 +549,7 @@ fieldset[disabled] .btn-theme {
 .header .navbar-toggle .toggle-icon:before, .header .navbar-toggle .toggle-icon:after {
   position: absolute;
   left: 0;
-  background: #515769;
+  background: #2669c4;
   content: " ";
 }
 
@@ -746,7 +746,7 @@ fieldset[disabled] .btn-theme {
   }
   /* Navbar Nav */
   .header .nav-item-child {
-    color: #515769;
+    color: #2669c4;
     line-height: 1.4;
     padding: 12px 12px 12px 15px;
   }
@@ -810,7 +810,7 @@ fieldset[disabled] .btn-theme {
     transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
   }
   .page-on-scroll .header .nav-item-child {
-    color: #515769;
+    color: #2669c4;
     transition-duration: 300ms;
     transition-property: all;
     transition-timing-function: cubic-bezier(0.7, 1, 0.7, 1);
@@ -844,7 +844,7 @@ fieldset[disabled] .btn-theme {
   line-height: 3;
   letter-spacing: 1px;
   text-transform: uppercase;
-  background: #515769;
+  background: #2669c4;
   border-radius: 3px;
   visibility: hidden;
   opacity: 0;
@@ -927,20 +927,20 @@ fieldset[disabled] .btn-theme {
 }
 
 .form-control:focus {
-  color: #515769;
+  color: #2669c4;
   box-shadow: none;
 }
 
 .form-control:focus::-moz-placeholder {
-  color: #515769;
+  color: #2669c4;
 }
 
 .form-control:focus:-ms-input-placeholder {
-  color: #515769;
+  color: #2669c4;
 }
 
 .form-control:focus::-webkit-input-placeholder {
-  color: #515769;
+  color: #2669c4;
 }
 
 /*------------------------------------------------------------------
@@ -1019,7 +1019,7 @@ fieldset[disabled] .btn-theme {
   right: 0;
   font-size: 15px;
   font-family: Simple-Line-Icons;
-  color: #515769;
+  color: #2669c4;
   content: "\e082";
 }
 
@@ -1163,7 +1163,7 @@ fieldset[disabled] .btn-theme {
 }
 
 .color-heading {
-  color: #515769;
+  color: #2669c4;
 }
 
 .color-subtitle {
@@ -1194,7 +1194,7 @@ fieldset[disabled] .btn-theme {
 }
 
 .bg-color-heading {
-  background: #515769;
+  background: #2669c4;
 }
 
 .bg-color-subtitle {
