--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: auto;
 }
 #header.header-scrolled {
-  background: #fff;
+  background: rgb(0, 0, 0);
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
   top: 0;
 }
@@ -184,7 +184,7 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 99;
   opacity: 0;
   visibility: hidden;
-  background: #fff;
+  background: rgb(0, 0, 0);
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
 }
