--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1346,3 +1346,16 @@ section {
   color: #fff;
   text-decoration: none;
 }
+#footer .contact-btn{
+    color: #ffffff;
+    background-color: #bf9007;
+    border-color: #bf9007;
+    border-style: solid;
+    border-width: 1px 1px 1px 1px;
+    border-radius: 30px 30px 30px 30px;
+    padding: 10px;
+}
+#footer .contact-btn:hover{
+    background-color: #ffffff;
+    color: #bf9007;
+}
