--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,7 +321,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   position: relative;
-  margin: 72px 0;
+  margin: 0px 0;
 }
 #hero .container {
   padding-top: 80px;
@@ -376,7 +376,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 768px) {
   #hero {
-    height: 100vh;
+    height: 92vh;
+    margin-top: -15px;
   }
   #hero .container {
     padding-top: 60px;
@@ -391,33 +392,28 @@ h1, h2, h3, h4, h5, h6 {
   min-width: 100vw;
 }
 .slide-1{
-  background-image: url(../img/slider/1.webp);
-  background-size: cover;
-  background-position: center;
+  background-image: url(../img/slider/s1.webp);
+  background-size: 100%;
   min-height: 100vh;
 }
 .slide-2{
-  background-image: url(../img/slider/2.webp);
-  background-size: cover;
-  background-position: center;
+  background-image: url(../img/slider/s2.webp);
+  background-size: 100%;
   min-height: 100vh;
 }
 .slide-3{
-  background-image: url(../img/slider/3.webp);
-  background-size: cover;
-  background-position: center;
+  background-image: url(../img/slider/s3.webp);
+  background-size: 100%;
   min-height: 100vh;
 }
 .slide-4{
   background-image: url(../img/slider/4.webp);
-  background-size: cover;
-  background-position: center;
+  background-size: 100%;
   min-height: 100vh;
 }
 .slide-5{
   background-image: url(../img/slider/5.webp);
-  background-size: cover;
-  background-position: center;
+  background-size: 100%;
   min-height: 100vh;
 }
 
@@ -425,32 +421,32 @@ h1, h2, h3, h4, h5, h6 {
   .slide-1{
     position: relative;
     margin-top: 0;
-    background-image: url(../img/slider/1-ph.webp);
-    background-size: cover;
-    background-position: center;
+    background-image: url(../img/slider/s1-ph.webp);
+    background-repeat: no-repeat;
   }
   .slide-2{
     position: relative;
     margin-top: 0;
-    background-image: url(../img/slider/2-ph.webp);
+    background-image: url(../img/slider/s2-ph.webp);
+    background-repeat: no-repeat;
   }
   .slide-3{
     position: relative;
     margin-top: 0;    
-    background-image: url(../img/slider/3-ph.webp);
+    background-image: url(../img/slider/s3-ph.webp);
+    background-repeat: no-repeat;
   }
   .slide-4{    
     position: relative;
     margin-top: 0;    
     background-image: url(../img/slider/4-ph.webp);
+    background-repeat: no-repeat;
   }
   .slide-5{
     position: relative;
     margin-top: 0;    
-    background-image: url(../img/slider/5-ph.webp);
-    background-size: cover;
-    background-position: center;
-    
+    background-image: url(../img/slider/5-ph.webp);  
+    background-repeat: no-repeat;
   }
 }
 
