--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ h1, h2, h3, h4, h5, h6 {
   .slide-4{    
     position: relative;
     margin-top: 0;    
-    background-image: url(../img/slider/4-ph.webp);
+    background-image: url(../img/slider/s4-ph.webp);
     background-repeat: no-repeat;
   }
 }
