--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -385,17 +385,17 @@ h1, h2, h3, h4, h5, h6 {
   min-width: 100vw;
 }
 .slide-1{
-  background-image: url(../img/slider/1.webp);
+  background-image: url(../img/slider/1n.webp);
   background-size: 100%;
   min-height: 100vh;
 }
 .slide-2{
-  background-image: url(../img/slider/2.webp);
+  background-image: url(../img/slider/2n.webp);
   background-size: 100%;
   min-height: 100vh;
 }
 .slide-3{
-  background-image: url(../img/slider/3.webp);
+  background-image: url(../img/slider/3n.webp);
   background-size: 100%;
   min-height: 100vh;
 }
@@ -409,19 +409,19 @@ h1, h2, h3, h4, h5, h6 {
   .slide-1{
     position: relative;
     margin-top: 0;
-    background-image: url(../img/slider/s1-ph.webp);
+    background-image: url(../img/slider/1-ph.webp);
     background-repeat: no-repeat;
   }
   .slide-2{
     position: relative;
     margin-top: 0;
-    background-image: url(../img/slider/s2-ph.webp);
+    background-image: url(../img/slider/2-ph.webp);
     background-repeat: no-repeat;
   }
   .slide-3{
     position: relative;
     margin-top: 0;    
-    background-image: url(../img/slider/s3-ph.webp);
+    background-image: url(../img/slider/3-ph.webp);
     background-repeat: no-repeat;
   }
   .slide-4{    
