--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -721,6 +721,35 @@ section {
 }
 
 /*--------------------------------------------------------------
+# call for papers
+--------------------------------------------------------------*/
+ .callforpapers-nav .nav-tabs{
+  background-color: #333333;
+  padding: 8px 14px;
+  font-size: 14px;
+  color: #bf9007;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.callforpapers .callforpapers-nav .nav-link {
+  text-transform: uppercase;
+  color: #bf9007;
+  border-radius: 0;
+  border: none;
+  font-size: 14px;
+  line-height: 1.5;
+}
+
+.callforpapers .callforpapers-nav .nav-link.active {
+  text-transform: uppercase;
+  background-color: transparent;
+  border-color: transparent;
+  color: #fff;
+  border-bottom: 4px solid #bf9007;
+  font-size: 16px;
+  line-height: 1.5;
+}
+/*--------------------------------------------------------------
 # publication
 --------------------------------------------------------------*/
 .publication .publication-item {
