--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1366,3 +1366,17 @@ section {
     background-color: #ffffff;
     color: #bf9007;
 }
+
+#speakers .modal-btn{
+  color: #ffffff;
+  background-color: #bf9007;
+  border-color: #bf9007;
+  border-style: solid;
+  border-width: 1px 1px 1px 1px;
+  border-radius: 30px 30px 30px 30px;
+  padding: 10px;
+}
+#speakers .modal-btn:hover{
+  background-color: #ffffff;
+  color: #bf9007;
+}
