updates - venue and speakers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1377,6 +1377,6 @@ section {
   padding: 10px;
 }
 #speakers .modal-btn:hover{
-  background-color: #ffffff;
+  background-color: #fff;
   color: #bf9007;
 }
